# ISRE

./: .gitignore  CONTRIBUTING.md  Dockerfile  MARKET_ANALYSIS_AND_PAIN_POINTS.md  Makefile  README.md  docker-compose.yml  knowledge.json  pyproject.toml  requirements-dev.txt  requirements.txt  roadmapproduction.md  tox.ini
.github/workflows/: ci.yml
.kiro/specs/intentional-semantic-reasoning-engine/: design.md  requirements.md
docs/: COMPLETE_VALIDATION_SUMMARY.md  REASONING_ENGINE_VALIDATION.md  TECHNICAL_VALIDATION.md
isre/: __init__.py  cli.py  config.py  types.py
isre/api/: server.py
isre/compression/: __init__.py  base.py  multimodal.py  semantic_map.json  speech.py  text.py
isre/graph/: builder.py
isre/knowledge/: __init__.py  domain.py  engine.py  gaps.py  physics.py
isre/knowledge/backends/: __init__.py  base.py  json_backend.py  sqlite_backend.py
isre/models/: __init__.py  intent.py  primitives.py  reasoning.py
isre/pipeline/: orchestrator.py
isre/reasoning/: __init__.py  dynamics.py  generator.py  selection.py
isre/reconstruction/: __init__.py  action.py  base.py  code.py  language.py  markdown.py  translator.py
isre/utils/: __init__.py  architectural_validator.py  logging.py  resources.py
scripts/: benchmark.py  verify_isre.py
tests/: conftest.py  test_extensibility.py  test_meta.py  test_performance.py  test_reconstruction.py  test_scalability.py
