[project]
name = "isre-engine"
version = "0.1.0"
description = "Intentional Semantic Reasoning Engine - A deterministic, 5-layer semantic reasoning system"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
keywords = ["reasoning", "semantic", "nlp", "deterministic", "intent"]
authors = [
    {name = "ISRE Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]
all = [
    "isre[test,server,dev]",
]

[project.urls]
Homepage = "https://github.com/abhi9199-tech42/ISRE"
Repository = "https://github.com/abhi9199-tech42/ISRE"
Documentation = "https://github.com/abhi9199-tech42/ISRE#readme"

[project.scripts]
isre = "isre.cli:main"
isre-server = "isre.api.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["isre*"]
exclude = ["test_outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=isre --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["isre"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["isre"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
